# AppTransporte

./: README.md
AppTransporte/: CMakeLists.txt
AppTransporte/headers/: AreaGestor.h  Empresa.h  Horario.h  Loja.h  Motorista.h  ReservaLugares.h  Rota.h  Utilizador.h
AppTransporte/sources/: AreaGestor.cpp  Empresa.cpp  Horario.cpp  Loja.cpp  Motorista.cpp  ReservaLugares.cpp  Rota.cpp  Transporte.cpp  main.cpp
